=== 2.0.10 2013-10-03

* API Addition: Event resource added for webhook consumption.


=== 2.0.9 2013-09-19

* Interface Change: Changed batch.scan_form to batch.create_scan_form to support the ability to refer to scan forms associated to batches.


=== 2.0.3 2013-07-31

* API Addition: Tracker resource added. Trackers can be used to register any tracking code with EasyPost webhooks.


=== 2.0.2 2013-07-23

* API Addition: Shipment.track_with_code returns tracking details for any tracking code.


=== 2.0.1 2013-07-07

* API Addition: Address.create_and_verify returns a verified address in one step.
* API Addition: Shipment.label forces the creation of additional label formats (pdf, epl2, zpl).
* API Addition: Shipment.insure purchases insurance for a shipment.
* Library Update: Added the ability to negatively filter carriers and services with Shipment.lowest_rate (e.g. '!usps').